# genesis1

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
config/: config.yaml
scripts/: setup_dev.sh
src/api/: main.py
src/core/: __init__.py  energy_optimizer.py  ml_core.py
tests/: test_ml_core.py
